<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">装修计算器</string>
    <string name="coating_calculation">涂料计算器</string>
    <string name="floor_calculator">地板计算器</string>
    <string name="wall_calculation">墙砖计算器</string>
    <string name="wallpaper_calculator">壁纸计算器</string>
    <string name="floor_tile_calculation">地砖计算器</string>
    <string name="curtain_calculator">窗帘计算器</string>
    <string name="main_page">首页</string>
    <string name="info">信息录入</string>
    <string name="history">历史记录</string>

    <!--信息录入-->
    <string name="house_info">请输入房屋信息：</string>
    <string name="enter_house_height">房间高度：</string>
    <string name="enter_house_width">房间宽度：</string>
    <string name="enter_house_long">房间长度：</string>
    <string name="enter_wall_height">墙面高度：</string>
    <string name="enter_wall_width">墙面宽度：</string>
    <string name="enter_wall_long">墙面长度：</string>
    <string name="enter_wall_count">墙面面数：</string>
    <string name="enter_window_height">窗户高度：</string>
    <string name="enter_window_width">窗户宽度：</string>
    <string name="enter_window_count">窗户数量：</string>
    <string name="enter_door_height">门的高度：</string>
    <string name="enter_door_width">门的宽度：</string>
    <string name="enter_door_count">门的扇数：</string>
    <string name="enter_floor_long">地板长度：</string>
    <string name="enter_floor_width">地板宽度：</string>
    <string name="enter_floor_tile_long">地砖长度：</string>
    <string name="enter_floor_tile_width">地砖宽度：</string>
    <string name="enter_wall_Tile_long">墙砖长度：</string>
    <string name="enter_wall_Tile_width">墙砖宽度：</string>

    <string name="height">高：</string>
    <string name="width">宽：</string>
    <string name="long_">长：</string>
    <string name="unit_m">米</string>
    <string name="unit_mm">毫米</string>
    <string name="save">保存</string>
    <string name="calculate">计算</string>
    <string name="restart">重置</string>
    <string name="cocating_cover">涂料覆盖率：</string>
    <string name="cocating_price">涂料单价：</string>
    <string name="unit_square_meter">平方米/升</string>
    <string name="unit_yuan">元/升</string>
    <string name="cocating_cover_notice">8.6平米/升是行业标准，也就是涂刷墙面三遍所需要的量。您也可以在输入框中自定义涂料覆盖率。</string>
    <string name="cocating_count_result">您所需要的涂料总量为：</string>
    <string name="cocating_total_price_result">您所需要的涂料总价为：</string>
    <string name="floor_count_result">您所需要的地板数量为：</string>
    <string name="floor_total_price_result">您所需要的地板总价为：</string>
    <string name="floor_tile_count_result">您所需要的地砖数量为：</string>
    <string name="floor_tile_total_price_result">您所需要的地砖总价为：</string>
    <string name="wall_tile_count_result">您所需要的墙砖数量为：</string>
    <string name="wall_tile_total_price_result">您所需要的墙砖总价为：</string>
    <string name="cocating_unit">升</string>
    <string name="money_unit">元</string>
    <string name="unit_per_floor">块</string>
    <string name="per_floor_price">地板单价：</string>
    <string name="per_floor_tile_price">地砖单价：</string>
    <string name="wall_tiler_price">墙砖单价：</string>
    <string name="wall_paper_size">壁纸规格：</string>
    <string name="wall_paper_unit">平方米/卷</string>
    <string name="wall_paper_notice">5.2平米/卷是行业标准。您也可以在输入框中自定义壁纸规格。</string>
    <string name="wall_paper_price">壁纸单价：</string>
    <string name="wall_paper_price_unit">元/卷</string>
    <string name="wall_paper_count_result">您所需要的壁纸数量为：</string>
    <string name="wall_paper_total_price_result">您所需要的壁纸总价为：</string>
    <string name="juan_unit">卷</string>
    <string name="unit_mian">面</string>
    <string name="unit_shan">扇</string>
    <string name="cloth_width">布料宽度：</string>
    <string name="cloth_price">布料单价：</string>
    <string name="cloth_price_unit">元/米</string>
    <string name="cloth_paper_count_result">您所需要的布料数量为：</string>
    <string name="cloth_paper_total_price_result">您所需要的布料价格为：</string>

</resources>
