<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hh.myapplication.MainActivity">
    <include
        android:id="@+id/title"
        layout="@layout/layout_title"/>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_height"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--房间信息-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/wall_height_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/info_text"
                        android:text="@string/enter_wall_height" />
                    <EditText
                        android:id="@+id/wall_height_edittext"
                        style="@style/info_edit"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/unit_m" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/wall_long_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_below="@id/wall_height_layout"
                    android:layout_marginTop="@dimen/info_margin"
                    android:layout_centerHorizontal="true">
                    <TextView
                        style="@style/info_text"
                        android:text="@string/enter_wall_long" />
                    <EditText
                        android:id="@+id/wall_long_edittext"
                        style="@style/info_edit"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/unit_m" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/wall_count_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/wall_long_layout"
                    android:layout_marginTop="@dimen/info_margin"
                    android:layout_centerHorizontal="true">
                    <TextView
                        style="@style/info_text"
                        android:text="@string/enter_wall_count" />
                    <EditText
                        android:id="@+id/wall_count_edittext"
                        style="@style/info_edit"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/unit_mian" />
                </LinearLayout>
            </RelativeLayout>
            <!--壁纸信息-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_vertical_margin"
                >
                <LinearLayout
                    android:id="@+id/wall_paper_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    >
                    <TextView
                        style="@style/info_text"
                        android:text="@string/wall_paper_size" />
                    <EditText
                        android:id="@+id/wall_paper_size_edit"
                        style="@style/info_edit"
                        android:hint="5.2"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/wall_paper_unit" />
                </LinearLayout>
                <TextView
                    android:id="@+id/wall_paper_notice"
                    android:layout_below="@id/wall_paper_layout"
                    style="@style/info_text"
                    android:text="@string/wall_paper_notice" />
                <LinearLayout
                    android:id="@+id/wall_paper_price_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wall_paper_notice"
                    android:layout_marginTop="@dimen/info_margin"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    >
                    <TextView
                        style="@style/info_text"
                        android:text="@string/wall_paper_price" />
                    <EditText
                        android:id="@+id/wall_paper_price_edit"
                        style="@style/info_edit"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/wall_paper_price_unit" />
                </LinearLayout>
            </RelativeLayout>
            <!--计算结果-->
            <RelativeLayout
                android:id="@+id/result_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:padding="@dimen/activity_vertical_margin"
                android:visibility="gone"
                >
                <LinearLayout
                    android:id="@+id/count_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    >
                    <TextView
                        style="@style/info_text"
                        android:text="@string/wall_paper_count_result"
                        android:textColor="@color/dark_blue"/>
                    <TextView
                        android:id="@+id/wall_paper_count_text"
                        style="@style/info_text"
                        android:textColor="@color/dark_blue"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/juan_unit"
                        android:textColor="@color/dark_blue"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wall_paper_totalprice_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/count_layout"
                    android:layout_marginTop="@dimen/info_margin"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    >
                    <TextView
                        style="@style/info_text"
                        android:text="@string/wall_paper_total_price_result"
                        android:textColor="@color/dark_blue"/>
                    <TextView
                        android:id="@+id/wall_paper_total_price_text"
                        style="@style/info_text"
                        android:textColor="@color/dark_blue"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/money_unit"
                        android:textColor="@color/dark_blue"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/restart"
            style="@style/normal_btn"
            android:layout_weight="1"
            android:text="@string/restart"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />
        <Button
            android:id="@+id/calculate"
            style="@style/normal_btn"
            android:layout_weight="1"
            android:text="@string/calculate"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />
    </LinearLayout>

</RelativeLayout>
