<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hh.myapplication.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/house_long_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:orientation="horizontal">
            <TextView
                style="@style/info_text"
                android:text="@string/enter_house_long" />
            <EditText
                android:id="@+id/house_long_edittext"
                style="@style/info_edit"
                />
            <TextView
                style="@style/info_text"
                android:text="@string/unit_m" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/house_width_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/info_margin"
            >
            <TextView
                style="@style/info_text"
                android:text="@string/enter_house_width" />
            <EditText
                android:id="@+id/house_width_edittext"
                style="@style/info_edit"
                />
            <TextView
                style="@style/info_text"
                android:text="@string/unit_m" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/house_height_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/info_margin"
            >
            <TextView
                style="@style/info_text"
                android:text="@string/enter_house_height" />
            <EditText
                android:id="@+id/house_height_edittext"
                style="@style/info_edit"
                />
            <TextView
                style="@style/info_text"
                android:text="@string/unit_m" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/door_height_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/info_margin"
            android:layout_below="@+id/house_height_layout"
            android:layout_alignLeft="@+id/house_long_layout"
            android:layout_alignStart="@+id/house_long_layout">
            <TextView
                style="@style/info_text"
                android:text="@string/enter_door_height" />
            <EditText
                android:id="@+id/door_height_edit"
                style="@style/info_edit"
                />
            <TextView
                style="@style/info_text"
                android:text="@string/unit_m" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/door_width_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/info_margin"
            android:layout_below="@+id/door_height_layout"
            android:layout_alignLeft="@+id/house_long_layout"
            android:layout_alignStart="@+id/house_long_layout">
            <TextView
                style="@style/info_text"
                android:text="@string/enter_door_width" />
            <EditText
                android:id="@+id/door_width_edit"
                style="@style/info_edit"
                />
            <TextView
                style="@style/info_text"
                android:text="@string/unit_m" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/door_count_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/info_margin"
            >
            <TextView
                style="@style/info_text"
                android:text="@string/enter_door_count" />
            <EditText
                android:id="@+id/door_count_edit"
                style="@style/info_edit"
                />
            <TextView
                style="@style/info_text"
                android:text="@string/unit_shan" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/window_height_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/info_margin"
            >
            <TextView
                style="@style/info_text"
                android:text="@string/enter_window_height" />
            <EditText
                android:id="@+id/window_height_edit"
                style="@style/info_edit"
                />
            <TextView
                style="@style/info_text"
                android:text="@string/unit_m" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/window_width_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/info_margin"
            >
            <TextView
                style="@style/info_text"
                android:text="@string/enter_window_width" />
            <EditText
                android:id="@+id/window_width_edit"
                style="@style/info_edit"
                />
            <TextView
                style="@style/info_text"
                android:text="@string/unit_m" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/window_count_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/info_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            >
            <TextView
                style="@style/info_text"
                android:text="@string/enter_window_count" />
            <EditText
                android:id="@+id/window_count_edit"
                style="@style/info_edit"
                />
            <TextView
                style="@style/info_text"
                android:text="@string/unit_shan" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/save_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            >
            <Button
                android:id="@+id/save"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="2px"
                style="@style/normal_btn"
                android:text="@string/save"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>