<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hh.myapplication.MainActivity">
    <include
        android:id="@+id/title"
        layout="@layout/layout_title"/>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_height"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--窗信息-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal">
                <LinearLayout
                    android:id="@+id/window_height_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        style="@style/info_text"
                        android:text="@string/enter_window_height" />
                    <EditText
                        android:id="@+id/window_height_edit"
                        style="@style/info_edit"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/unit_m" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/window_width_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/info_margin"
                    android:layout_below="@+id/window_height_layout"
                    >
                    <TextView
                        style="@style/info_text"
                        android:text="@string/enter_window_width" />
                    <EditText
                        android:id="@+id/window_width_edit"
                        style="@style/info_edit"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/unit_m"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/window_count_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/info_margin"
                    android:layout_below="@+id/window_width_layout"
                    >
                    <TextView
                        style="@style/info_text"
                        android:text="@string/enter_window_count" />
                    <EditText
                        android:id="@+id/window_count_edit"
                        style="@style/info_edit"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/unit_shan" />
                </LinearLayout>
            </RelativeLayout>
            <!--布料信息-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_vertical_margin"
                >
                <LinearLayout
                    android:id="@+id/cloth_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    >
                    <TextView
                        style="@style/info_text"
                        android:text="@string/cloth_width" />
                    <EditText
                        android:id="@+id/cloth_width_edit"
                        style="@style/info_edit"

                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/unit_m" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cloth_price_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cloth_layout"
                    android:layout_marginTop="@dimen/info_margin"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    >
                    <TextView
                        style="@style/info_text"
                        android:text="@string/cloth_price" />
                    <EditText
                        android:id="@+id/cloth_price_edit"
                        style="@style/info_edit"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/cloth_price_unit" />
                </LinearLayout>
            </RelativeLayout>

            <!--计算结果-->
            <RelativeLayout
                android:id="@+id/result_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:padding="@dimen/activity_vertical_margin"
                android:visibility="gone"
                >
                <LinearLayout
                    android:id="@+id/cloth_count_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    >
                    <TextView
                        style="@style/info_text"
                        android:text="@string/cloth_paper_count_result"
                        android:textColor="@color/dark_blue"/>
                    <TextView
                        android:id="@+id/cloth_count_edit"
                        style="@style/info_text"
                        android:textColor="@color/dark_blue"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/unit_m"
                        android:textColor="@color/dark_blue"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cloth_totalprice_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cloth_count_layout"
                    android:layout_marginTop="@dimen/info_margin"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    >
                    <TextView
                        style="@style/info_text"
                        android:text="@string/cloth_paper_total_price_result"
                        android:textColor="@color/dark_blue"/>
                    <TextView
                        android:id="@+id/cloth_total_price_edit"
                        style="@style/info_text"
                        android:textColor="@color/dark_blue"
                        />
                    <TextView
                        style="@style/info_text"
                        android:text="@string/unit_yuan"
                        android:textColor="@color/dark_blue"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/restart"
            style="@style/normal_btn"
            android:layout_weight="1"
            android:text="@string/restart"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />
        <Button
            android:id="@+id/calculate"
            style="@style/normal_btn"
            android:layout_weight="1"
            android:text="@string/calculate"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />
    </LinearLayout>

</RelativeLayout>
